front-end/src/App.css
.App {
  text-align: center;
}

.App-header {
  background-color: #171a21;
  min-height: 100vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: #c7d5e0;
  font-family: "Motiva Sans", Tahoma, Arial, Helvetica, Verdana, sans-serif;
}

.circle1 {
  background-color: #1b2838;
  height: 5vh;
  width: 5vh;
  border-radius: 100px;
  border: 3px solid #66c0f4;
  position: relative;
  z-index: 1;
  left: 99%;
  top: -10%;
  margin-top: -15px;
}

.img {
  height: 35px;
  width: 35px;
  margin-top: 5px;
  margin-left: 5px;
}

/*.circle2 {
  background-color: #1b2838;
  height: 5vh;
  width: 5vh;
  border-radius: 100px;
  align-items: center;
  border: 3px solid black;
  position: absolute;
  z-index: 1;
  left: 62%;
  top: 33%;
}*/

.contain {
  font-size: 72px;
  font-weight: bold;
  text-align: left;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 50px;
}

.title {
  font-size: 48px;
  margin-bottom: 50px;
}

.welcome {
  font-size: 24px;
  text-align: center;
  align-items: center;
  margin-right: 20px;
  margin-left: 20px;
  white-space: pre;
  font-weight: bold;
  margin-bottom: 100px;
}

.results {
  min-height: 20vh;
  min-width: 160vh;
  background-color: #1b2838;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  font-size: 36px;
  color: #c7d5e0;
  padding-left: 15px;
  padding-right: 15px;
  font-weight: bold;
  border-radius: 10px;
  border: 3px solid #66c0f4;
  margin-bottom: 5px;
}

.link-profile {
  display: flex;
  flex-direction: row;
  margin-bottom: 30px;
  margin-top: 10px;
}

.profile {
  background-color: #171a21;
  color: #c7d5e0;
  margin-top: 20px;
  min-width: 135vh;
  min-height: 50px;
  border-radius: 10px;
  font-size: 24px;
  border: 2px solid #66c0f4;
}

.submit {
  background-color: #2a475e;
  border: 2px solid #66c0f4;
  min-height: 50px;
  min-width: 175px;
  margin: 20px 0 0 25px;
  font-size: 36px;
  color: #c7d5e0;
  border-radius: 15px;
}

/*.faves {
  background-color: #1b2838;
  min-height: 25vh;
  max-height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 36px;
  color: #c7d5e0;
  font-weight: bold;
  border-radius: 10px;
  text-align: left;
  padding: 15px;
  border: 3px solid #66c0f4;
}

.fave-list {
  background-color: #171a21;
  min-width: 90%;
  height: 50vh;
  overflow: auto;
  display: flex;
  flex-direction: column;
  font-weight: normal;
  border: 2px solid #66c0f4;
  align-items: flex-start;
  border-radius: 10px;
  margin: 15px;
  font-size: 30px;
}

.checklist {
  font-size: 24px;
  font-weight: normal;
}*/

.link {
  display: flex;
  flex-direction: column;
  margin-top: 100px;
  margin-left: 915px;
}

.next {
  background-color: #2a475e;
  min-height: 15vh;
  min-width: 45vh;
  font-size: 1.5em;
  margin-left: 75px;
  margin-bottom: 30px;
  align-self: flex-end;
  border-radius: 15px;
  border: 3px solid #66c0f4;
  color: #c7d5e0;
}

.recs {
  background-color: #171a21;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 48px;
  font-family: "Motiva Sans", Tahoma, Arial, Helvetica, Verdana, sans-serif;
  font-weight: bold;
  color: #c7d5e0;
}

.top {
  display: flex;
  flex-direction: row;
  text-align: center;
  align-items: flex-start;
  margin-bottom: 20px;
  align-self: flex-start;
}

.back {
  background-color: #2a475e;
  min-height: 3vh;
  min-width: 20vh;
  font-size: 0.75em;
  align-self: flex-start;
  border-radius: 15px;
  border: 3px solid #66c0f4;
  margin-left: 50px;
  margin-right: 475px;
  color: #c7d5e0;
}

.filter1 {
  background-color: #2a475e;
  min-height: 4vh;
  min-width: 20vh;
  font-size: 0.75em;
  margin: 15px 25px 15px 45px;
  border-radius: 15px;
  border: 3px solid #66c0f4;
  color: #c7d5e0;
}

.filter {
  background-color: #2a475e;
  min-height: 4vh;
  min-width: 20vh;
  font-size: 0.75em;
  margin: 15px 25px 15px 25px;
  border-radius: 15px;
  border: 3px solid #66c0f4;
  color: #c7d5e0;
}

.rec-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  background-color: #171a21;
  border-radius: 15px;
  align-self: center;
  min-width: 95%;
  overflow: auto;
  margin: 20px;
  border: 2px solid #66c0f4;
  padding: 10px;
}

.header {
  font-weight: bold;
  margin-right: 10px;
}

.rec-list {
  font-weight: normal;
  display: flex;
  flex-direction: row;
  width: 160vh;
  height: 50vh;
  overflow: auto;
  font-size: 32px;
}

.games {
  display: flex;
  flex-direction: column;
  min-width: 100px;
}

.titles {
  display: flex;
  flex-direction: column;
  min-width: 1000px;
}

.prices {
  display: flex;
  flex-direction: column;
  min-width: 150px;
}

.genres {
  display: flex;
  flex-direction: column;
  min-width: 350px;
}

.devs {
  display: flex;
  flex-direction: column;

  min-width: 750px;
}

.pubs {
  display: flex;
  flex-direction: column;
  min-width: 750px;
}



.game {
  border-top: 1px solid #66c0f4;
  border-bottom: 1px solid #66c0f4;
}

